Fix-text-background-overlapping-on-Index

--- a/themes/hugo/source/css/style.styl
+++ b/themes/hugo/source/css/style.styl
@@ -265,9 +265,13 @@ figure
     letter-spacing: -1px
 
 .hugo-reverted
-  background-color: $color-text
   color: $color-background
   display: inline
+  position: relative
+
+.hugo-reverted-container
+  background-color: $color-text
+  position: relative
 
 .hugo-degrec
   background-color: $color-text
